--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/andrentfs/clear-node-api#readme",
   "devDependencies": {
-    "git-commit-msg-linter": "^3.0.0"
+    "@types/node": "^14.14.3",
+    "git-commit-msg-linter": "^3.0.0",
+    "typescript": "^4.0.3"
   }
 }
