--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
   "homepage": "https://github.com/andrentfs/clear-node-api#readme",
   "devDependencies": {
     "@types/node": "^14.14.3",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "eslint": "^7.12.0",
+    "eslint-config-standard-with-typescript": "^19.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.2",
     "git-commit-msg-linter": "^3.0.0",
     "typescript": "^4.0.3"
   }
