--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:staged": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/andrentfs/clear-node-api#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.3",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "eslint": "^7.12.0",
@@ -27,6 +29,10 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.2",
     "git-commit-msg-linter": "^3.0.0",
+    "husky": "^4.3.0",
+    "jest": "^26.6.1",
+    "lint-staged": "^10.5.0",
+    "ts-jest": "^26.4.2",
     "typescript": "^4.0.3"
   }
 }
