--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,6 @@
         "module": "CommonJs",
         "target": "ES2019",
         "esModuleInterop": true,
-        "allowJs": true,
-        "strictNullChecks": true,
-        "allowNullableObject": true
+        "allowJs": true
     }
 }
