--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,13 @@
 {
-    "compilerOptions": {
-        "outDir": "./dist",
-        "module": "CommonJs",
-        "target": "ES2019",
-        "esModuleInterop": true,
-        "allowJs": true
+  "compilerOptions": {
+    "outDir": "./dist",
+    "target": "es2019",
+    "module": "commonjs",
+    "strict": true,
+    "esModuleInterop": true,
+    "allowJs": true, 
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "strictNullChecks": false
     }
 }
