feat: ensire SignUpController returns 400 if no name is provided

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "./dist",
     "target": "es2019",
     "module": "commonjs",
-    "strict": true,
+    "strict": false,
     "esModuleInterop": true,
     "allowJs": true, 
     "skipLibCheck": true,
