--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,9 @@
 {
-  "compilerOptions": {
-    "outDir": "./dist",
-    "target": "es2019",
-    "module": "commonjs",
-    "strict": false,
-    "esModuleInterop": true,
-    "allowJs": true, 
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "strictNullChecks": false
+    "compilerOptions": {
+        "outDir": "./dist",
+        "module": "commonjs",
+        "target": "es2019",
+        "esModuleInterop": true,
+        "allowJs": true
     }
 }
