--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/andrentfs/clear-node-api#readme",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.3",
     "@types/validator": "^13.1.0",
@@ -41,6 +42,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "validator": "^13.1.17"
   }
 }
