--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"name": "Existing Dockerfile",
+	"name": "Node Clear Code",
 
 	// Sets the run context to one level up instead of the .devcontainer folder.
 	"context": "..",
