--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/andrentfs/clear-node-api#readme",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.2.3",
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.15",
+    "@types/mongodb": "^3.6.3",
     "@types/node": "^14.14.3",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
@@ -43,6 +45,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "mongodb": "^3.6.3",
     "validator": "^13.1.17"
   }
 }
