--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.3",
     "@types/bcrypt": "^3.0.0",
+    "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
     "@types/mongodb": "^3.6.3",
     "@types/node": "^14.14.3",
@@ -40,11 +42,13 @@
     "husky": "^4.3.0",
     "jest": "^26.6.1",
     "lint-staged": "^10.5.0",
+    "sucrase": "^3.17.0",
     "ts-jest": "^26.4.3",
     "typescript": "^4.0.3"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "express": "^4.17.1",
     "mongodb": "^3.6.3",
     "validator": "^13.1.17"
   }
