--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^26.0.15",
     "@types/mongodb": "^3.6.3",
     "@types/node": "^14.14.3",
+    "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "eslint": "^7.12.0",
@@ -43,6 +44,7 @@
     "jest": "^26.6.1",
     "lint-staged": "^10.5.0",
     "sucrase": "^3.17.0",
+    "supertest": "^6.0.1",
     "ts-jest": "^26.4.3",
     "typescript": "^4.0.3"
   },
